# langgraph

./: .gitignore
.trae/specs/learning-agent-upgrade/: spec.md
learning-agent/: .env.example  CHANGELOG.md  README.md  TODO.md  main.py  pyproject.toml
learning-agent/.trae/documents/: optimization_plan.md
learning-agent/.trae/specs/refactor-architecture/: checklist.md  spec.md  tasks.md
learning-agent/docs/: 01【交个朋友】出海夺金从0-1跑通出海全流程_ev_AI总结.docx
learning-agent/learning-agent-upgrade/: checklist.md  tasks.md
learning-agent/output/logs/: log_20260419_025014.md  log_20260419_030133.md  log_20260419_031233.md  log_20260419_033849.md  log_20260419_034358.md  log_20260419_042156.md  log_20260419_125633.md  log_20260419_210859.md
learning-agent/output/obsidian/: learning_note_20260419_025014.md
learning-agent/output/obsidian/跨境电商/TikTok/美区运营/教程/: TikTok美区全流程入门.md
learning-agent/output/obsidian/跨境电商/TikTok美区兴趣电商入门与变现/教程/: 短视频与直播驱动的跨境电商全流程.md
learning-agent/src/learning_agent/: __init__.py  graph.py  nodes.py  state.py
